feat: add list icon to html, and div container Add list icon to template.html to act as the dropdown button. Wrap html buttons in a div container named "dropdown-container".

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,14 @@
     <body>
         <header>
             <nav>
-                <button class="nav-button">Home</button>
-                <button class="nav-button">About</button>
-                <button class="nav-button">Contact</button>
+                <div class="dropdown-container">
+                    <button class="dropdown-button">
+                        <img alt="Icon of dropdown-button" class="dropdown-butto" src="./img/list.png">
+                    </button>
+                    <button class="nav-button">Home</button>
+                    <button class="nav-button">About</button>
+                    <button class="nav-button">Contact</button>
+                </div>
             </nav>
         </header>
     </body>
