--- a/src/template.html
+++ b/src/template.html
@@ -11,11 +11,11 @@
             <nav>
                 <div class="dropdown-container">
                     <button class="dropdown-button">
-                        <img alt="Icon of dropdown-button" class="dropdown-butto" src="./img/list.png">
+                        <img alt="Icon of dropdown-button" class="dropdown-button" src="./img/list.png">
                     </button>
-                    <button class="nav-button">Home</button>
-                    <button class="nav-button">About</button>
-                    <button class="nav-button">Contact</button>
+                    <button class="nav-button hidden">Home</button>
+                    <button class="nav-button hidden">About</button>
+                    <button class="nav-button hidden">Contact</button>
                 </div>
             </nav>
         </header>
