feat: add dropdown logic in dropdown.js
Add module dropdown.js to contain dropdown logic.

Add function handleDropDownClick to add and remove the class "hidden"
from the nav buttons, depending on whether the data-status of the
dropdown button is opened or closed.

Add function attachDropDownListener that attaches a click evenet
listener to the dropdown button.

Call function attachDropDownListener in module index.js.

--- a/src/template.html
+++ b/src/template.html
@@ -10,8 +10,12 @@
         <header>
             <nav>
                 <div class="dropdown-container">
-                    <button class="dropdown-button">
-                        <img alt="Icon of dropdown-button" class="dropdown-button" src="./img/list.png">
+                    <button class="dropdown-button" data-status="closed">
+                        <img
+                            alt="Icon of dropdown-button"
+                            class="dropdown-icon"
+                            src="./img/list.png"
+                        />
                     </button>
                     <button class="nav-button hidden">Home</button>
                     <button class="nav-button hidden">About</button>
